[package]
name = "blockchain"
version = "0.1.0"
authors = ["Harsh Vishwakarma <harsh.vishwakarma@nagarro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = " 0.4", features = ["serde"] }
bincode = "1.0"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
rocket = "0.4.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]