[package]
name = "blockchain"
version = "0.1.0"
authors = ["Harsh Vishwakarma"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = " 0.4", features = ["serde"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket_contrib = {version = "0.4.6", default-features = false, features = ["json"]}